# hypergon-boilerplate

./: .gitmodules  CMakeLists.txt  README.md  hypergon-boilerplate.code-workspace  hypergon-example.code-workspace
libs/: CMakeLists.txt
src/: main.cpp
